# move_base2

./: CMakeLists.txt  README.md  node_introduction.md  package.xml  plugins_replacement.md
include/move_base2/: BaseController.h  BaseController.hpp  ClearCostmapRecovery.hpp  MoveBase.hpp  PointCost.hpp  Reporter.h  Reporter.hpp  TrappedRecovery.hpp  line_iterator.hpp  receive_goal_to_mb.hpp  request_info.hpp  speaker_client.h  state.hpp
launch/: localization_launch.py  move_base.launch.py  move_base_ros1.launch  navigation_launch.py  navigation_launch_dc.py  navigation_launch_tb3.py  other.launch.py  tracking_base.py  tracking_launch_mb.py
maps/: tb3_world.pgm  tb3_world.yaml
params/: localization_params.yaml  nav2_params.yaml  nav2_params_dc.yaml  nav2_params_tb3.yaml  nav2_params_test.yaml
rviz/: robot.rviz  simulation.rviz
scripts/: camera_server  keyboard_teleop.py  localization.py  mapping.py  publisher.py  robot_keyboard_teleop.py  run.py  set_mode.bash  swap_map
src/: BaseController.cpp  ClearCostmapRecovery.cpp  MoveBase.cpp  PointCost.cpp  Reporter.cpp  TrappedRecovery.cpp  lifecycle_client.cpp  main.cpp  main_to_mb.cpp  navi_to_client.cpp  receive_goal_to_mb.cpp  speaker_client.cpp
srv/: NavigateToPose.srv
test/: map.cpp  namespace_portal.cpp  odom.cpp  reid.cpp  test.cpp
